src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Engine_Capacity__c</fullName>
        <label>Engine Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_or_Task__c</fullName>
        <label>Event or Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>